[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "auth0-python"
version = "0.0.0"                                    # This is replaced by dynamic versioning
description = ""
authors = ["Auth0 <support@auth0.com>"]
license = "MIT"
repository = "https://github.com/auth0/auth0-python"
homepage = "https://auth0.com"
readme = "README.md"
packages = [{ include = "auth0" }]

[tool.poetry-dynamic-versioning]
strict = true
enable = true
vcs = "git"
style = "semver"
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}{% endif %}"
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]
folders = [{ path = "auth0" }]

[tool.poetry.dependencies]
python = ">=3.8"
aiohttp = "^3.8.5"
cryptography = "^42.0.4" # pyjwt has a weak dependency on cryptography
pyjwt = { git = "https://github.com/padrepitufo/pyjwt.git", tag = "2.9.0", extras = ["async"] }
requests = "^2.31.0"
urllib3 = "^2.0.7"       # requests has a weak dependency on urllib3

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.4"
mock = "^5.1.0"
pipx = "^1.2.0"
pytest = "^7.4.0"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = ">=0.21.1,<0.24.0"
pytest-cov = "^4.1.0"
responses = ">=0.23.3,<0.25.0"
