[metadata]
name = auth0_python
version = attr:auth0.__version__
description = Auth0 Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/auth0/auth0-python
author = Auth0
author_email = support@auth0.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    aiohttp>=3.8.5
    pyjwt[crypto]>=2.6.0
    requests>=2.31.0
python_requires = >=3.8

[options.extras_require]
dev =
    Sphinx
    aioresponses
    black
    callee
    coverage
    flake8
    isort
    mock
    pre-commit
    pytest
    pyupgrade
    responses
    sphinx-mdinclude
    sphinx-rtd-theme

[options.package_data]
auth0 = py.typed
